8217794: Missing termination check results violation of termination invariant

Reviewed-by: tschatzl, shade